# Weta-calibration-with-Atom

./: .gitattributes  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/agrob_bringup/: .catkin  .rosinstall  local_setup.sh
devel/.private/agrob_calibration/: .catkin  .rosinstall  local_setup.sh
devel/.private/agrob_description/: .catkin  setup.sh
devel/.private/atom/: .catkin  setup.sh
devel/.private/atom_calibration/: .catkin  local_setup.sh
devel/.private/atom_core/: .catkin  local_setup.sh  setup.sh
devel/.private/atom_evaluation/: .catkin  .rosinstall  local_setup.sh
devel/.private/atom_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/atom_worlds/: .catkin  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
devel/.private/hector_components_description/: .catkin  .rosinstall  local_setup.sh
devel/.private/hector_models/: .catkin  .rosinstall  local_setup.sh
devel/.private/hector_sensors_description/: .catkin  local_setup.sh  setup.sh
devel/.private/hector_xacro_tools/: .catkin  .rosinstall
devel/.private/husky_control/: .catkin  local_setup.sh
devel/.private/husky_description/: .catkin  local_setup.sh
devel/.private/husky_desktop/: .catkin  setup.sh
devel/.private/husky_gazebo/: .catkin  .rosinstall
devel/.private/husky_msgs/: .catkin  .rosinstall  local_setup.sh
devel/.private/husky_navigation/: .catkin  local_setup.sh  setup.sh
devel/.private/husky_simulator/: .catkin
devel/.private/husky_viz/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/mrbot_bringup/: .catkin  .rosinstall  local_setup.sh
devel/.private/mrbot_calibration/: .catkin  .rosinstall  setup.sh
devel/.private/mrbot_description/: .catkin  .rosinstall  local_setup.sh
devel/.private/mrbot_gazebo/: .catkin  .rosinstall  local_setup.sh
devel/.private/mrjbot_bringup/: .catkin  setup.sh
devel/.private/mrjbot_calibration/: .catkin  .rosinstall  local_setup.sh
devel/.private/mrjbot_description/: .catkin  .rosinstall  setup.sh
devel/.private/mrjbot_gazebo/: .catkin  local_setup.sh
devel/.private/rdbot_bringup/: .catkin  local_setup.sh
devel/.private/rdbot_calibration/: .catkin
devel/.private/rdbot_description/: .catkin  local_setup.sh  setup.sh
devel/.private/rdbot_gazebo/: .catkin  local_setup.sh  setup.sh
devel/.private/rihbot_bringup/: .catkin  local_setup.sh  setup.sh
devel/.private/rihbot_calibration/: .catkin  local_setup.sh  setup.sh
devel/.private/rihbot_description/: .catkin  setup.sh
devel/.private/rihbot_gazebo/: .catkin
devel/.private/rihmpbot_bringup/: .catkin  local_setup.sh
devel/.private/rihmpbot_calibration/: .catkin  .rosinstall
logs/rviz/: build.make.000.log.stderr
logs/weta_description_2/: build.check.000.log.stderr  build.check.022.log.stderr  build.cmake.000.log.stderr
src/: 2024-04-15-14-52-40.bag
src/Agrob4Simulation-master-Weta-weta_description/Weta/weta_bringup/: CMakeLists.txt
src/Agrob4Simulation-master-Weta-weta_description/Weta/weta_bringup/launch/: bringup.launch  load_model.launch  load_model.xml  spawn_robot.py  spawn_weta.launch.py
src/Agrob4Simulation-ros-melodic-AgRob_simulator-launch-weta_v2/AgRob_simulator/launch/weta_v2/: CMakeLists.txt  README.md  VLP-16.urdf.xacro  agrob_seixo_texture.world  agrob_simple_vineyard.world  config_teleop.yaml  package.xml  publisher.cpp  weta.launch  weta.urdf.xacro.bak  weta_simple_vineyard.launch
src/Agrob4Simulation-ros-melodic-AgRob_simulator-launch-weta_v2/AgRob_simulator/launch/weta_v2/config/: joint_names_MOWIT_URDF.yaml
src/Agrob4Simulation-ros-melodic-AgRob_simulator-launch-weta_v2/AgRob_simulator/launch/weta_v2/meshes/: FWL_Link.STL  FWR_Link.STL  base_link.STL  sprayer_body_Link.STL  visual_Rim_BWL_Link.STL  visual_Rim_FWL_Link.STL  visual_Rim_FWR_Link.STL  visual_antenna_bullet_Link.STL  visual_antenna_support_Link.STL  visual_base_link.STL  visual_container_Link.STL  visual_lid_Link.STL  visual_lidar_support_Link.STL  visual_nozzle_black_Link.STL  visual_sprayer_front_body_Link.STL
src/Agrob4Simulation-ros-melodic-AgRob_simulator-launch-weta_v2/AgRob_simulator/launch/weta_v2/scripts/: publisher.py
src/data/: migration_rules.yaml  rules
src/robot_test/: CMakeLists.txt
src/test_1/: CMakeLists.txt
(+789 files in other folders)
