<?xml version="1.0"?>
<package format="2">
  <name>weta_description_2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="duckfrost@gmail.com">tgrip</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>

  <!-- Test Dependencies -->
  <test_depend>gtest</test_depend>
  <test_depend>rosunit</test_depend>

  <!-- Build type -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <!-- Export tag (optional) -->
  <export>
    <!-- Additional export information can be placed here -->
  </export>
</package>
<!--<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>weta_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="duckfrost@gmail.com">tgrip</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>" -->